@@ -96,9 +96,10 @@ namespace XmlRpc
 			parseParam (ps.substr (pi));
 	}
 
-	XmlRpcServerGetRequest::XmlRpcServerGetRequest(std::string const& in_prefix, XmlRpcServer* server)
+	XmlRpcServerGetRequest::XmlRpcServerGetRequest(std::string const& in_prefix, const char *description, XmlRpcServer* server)
 	{
 		_prefix = in_prefix;
+		_description = description;
 		_server = server;
 		if (_server) _server->addGetRequest(this);
 	}
