@@ -1,3 +1,6 @@
+2010-03-19
+ * entry page with list of requests available on the server
+
 2010-03-16
  * added javascript date selection
  * removed wcs directory
